samples/_failures_safe/1761391451_015250_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f345cf4b.c: In function ‘main’:
./samples/SAFE/__tmp_f345cf4b.c:162:9: error: expected expression at end of input
  162 |         if (decompressed_size ==
      |         ^~
./samples/SAFE/__tmp_f345cf4b.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f345cf4b.c:162:9: error: expected declaration or statement at end of input
